tests/toy/neg/001364_mutation.toylang
program a = { var a : bool; a } .
